# markets-recon-product0

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt  tasks.md
.claude/: settings.json
.claude/hooks/: activate_venv.py
.claude/skills/code-quality/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.claude/skills/pre-commit/scripts/: run.sh
.claude/skills/testing/: SKILL.md
docs/: ARCHITECTURE.md  CONFIDENCE.md  DECISIONS.md  LLM_CONTRACTS.md  PIPELINE.md  REVIEW_UI.md  SCHEMAS.md  TAXONOMY.md  TESTING.md
scripts/: evaluate_mvp.py  generate_report_pack.py  run_sample.py
src/: __init__.py  exceptions.py
src/config/: __init__.py  logging.py  settings.py
src/extraction/: __init__.py  parser.py
src/llm/: __init__.py  client.py  contracts.py
src/llm/prompts/: __init__.py  calls.py  candidates.py  metadata.py  summaries.py  tags.py  tooltips.py  verification.py
src/models/: __init__.py  calls.py  confidence.py  core.py  document.py  enums.py  output.py  pipeline.py  profile.py  summaries.py  tags.py
src/pipeline/: __init__.py  run.py  validate.py
src/pipeline/stages/: __init__.py  s0_ingest.py  s10_confidence.py  s1_extract.py  s2_clean.py  s3_index.py  s4_metadata.py  s5_candidates.py  s6_calls.py  s7_summaries.py  s8_tooltips.py  s9_tags.py
src/retrieval/: __init__.py  indexer.py
src/storage/: __init__.py  blob.py  database.py
src/taxonomy/: __init__.py  hierarchy.py  synonyms.py  tags.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: __init__.py  llm_responses.py
tests/fixtures/expected_outputs/: full_pipeline.json
tests/integration/: test_s1_extract.py  test_s3_index.py  test_stage_s0_ingest.py  test_stage_s10_confidence.py  test_stage_s2_clean.py  test_stage_s3_index.py  test_stage_s4_metadata.py  test_stage_s5_candidates.py  test_stage_s6_calls.py  test_stage_s7_summaries.py  test_stage_s8_tooltips.py  test_stage_s9_tags.py
tests/unit/: test_confidence.py  test_exceptions.py
tests/unit/config/: test_logging.py  test_settings.py
tests/unit/extraction/: test_parser.py  test_table_extraction.py
tests/unit/fixtures/: test_llm_fixtures.py
tests/unit/llm/: __init__.py  test_client.py  test_contracts.py  test_prompts.py
tests/unit/models/: test_calls.py  test_confidence.py  test_core.py  test_document.py  test_enums.py  test_output.py  test_pipeline.py  test_profile.py  test_summaries.py  test_tags.py
tests/unit/pipeline/: test_orchestrator.py  test_validate.py
tests/unit/retrieval/: test_indexer.py
tests/unit/storage/: test_blob.py  test_database.py
tests/unit/taxonomy/: __init__.py  test_hierarchy.py  test_synonyms.py  test_tags.py
(+9 files in other folders)
